--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
