--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+"scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "build": "echo 'No build step needed for backend'"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,5 +19,8 @@
     "escpos-usb": "^3.0.0-alpha.4",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
