--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@imagekit/next": "^2.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.14.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.21",
+    "imagekitio-react": "^4.3.0",
     "json-server": "^1.0.0-beta.1",
     "lottie-react": "^2.4.0",
     "next": "14.0.2",
